--- a/repl/style.css
+++ b/repl/style.css
@@ -3,6 +3,8 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Atkinson Hyperlegible', system-ui, -apple-system, 'Open Sans',
+    'Helvetica Neue', Arial, sans-serif;
 }
 
 body {
@@ -12,7 +14,8 @@ body {
 }
 
 #controlls {
-  margin: 1em;
+  padding: 1em;
+  flex: 0 0 auto;
 }
 
 #editors {
@@ -36,7 +39,11 @@ body {
 
   #results {
     border-left: none;
-    border-top: 2px solid #000;
+    border-top: 1px solid #000;
+  }
+
+  #controlls {
+    padding: 2em 1em 1em 1em;
   }
 }
 
@@ -48,5 +55,29 @@ body {
 }
 
 #results {
-  border-left: 2px solid #000;
+  display: flex;
+  flex-direction: column;
+  border-left: 1px solid #000;
 }
+
+#output {
+  flex: 1 1 auto;
+  min-height: 0;
+  /* Ensure output fills remaining space and sits below controlls */
+  overflow: auto;
+}
+
+#controlls {
+  background-color: #D0E5DB;
+}
+
+#results .monaco-editor {
+  --vscode-editor-background: #F3F9F6;
+  --vscode-editorGutter-background: #F3F9F6;
+}
+
+/* #container .monaco-editor,
+#output .monaco-editor {
+  padding-top: 1em;
+  padding-bottom: 0.5em;
+} */
